P0: text/i18n + trust removal + mobile + supabase cleanup

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "seed:admin": "node scripts/seed_admin_user.mjs",
     "start": "next start",
     "test:e2e": "playwright test",
+    "live:verify": "node scripts/live-verify.mjs",
     "lint": "eslint src",
     "typecheck": "tsc --noEmit"
   },
